# BatchWise-Rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PORT-PROGRESS.md  README.md  openapi.yaml
.github/workflows/: backend.yml  frontend.yml  supabase-migrate.yml
docs/: supabase.md
examples/: grant_all_features.rs
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
migrations/: 000011_library_fermentables.down.sql  000011_library_fermentables.up.sql  000012_tenant_next_batch_number.down.sql  000012_tenant_next_batch_number.up.sql  000013_ingredient_analytical_fields.down.sql  000013_ingredient_analytical_fields.up.sql  000014_tenant_ibu_method.down.sql  000014_tenant_ibu_method.up.sql  000015_sales.down.sql  000015_sales.up.sql  000016_batch_cost_profitability.down.sql  000016_batch_cost_profitability.up.sql  000017_water_chemistry.down.sql  000017_water_chemistry.up.sql  000018_duty_returns.down.sql  000018_duty_returns.up.sql  000019_allergen_labels.down.sql  000019_allergen_labels.up.sql  000020_packaging_traceability.down.sql  000020_packaging_traceability.up.sql  000021_compliance_audit.down.sql  000021_compliance_audit.up.sql  000022_procurement.down.sql  000022_procurement.up.sql  000023_yeast_banking.down.sql  000023_yeast_banking.up.sql  000024_fermentation_readings.down.sql  000024_fermentation_readings.up.sql  000025_label_design.down.sql  000025_label_design.up.sql  000026_equipment_maintenance.down.sql  000026_equipment_maintenance.up.sql  000027_fermenters.down.sql  000027_fermenters.up.sql  000028_enable_rls.down.sql  000028_enable_rls.up.sql  0001_init.down.sql  0001_init.up.sql  0002_library.down.sql  0002_library.up.sql  (+16 more)
migrations/seed/: 001_styles.sql  002_yeasts.sql  003_equipment.sql  004_fermentables.sql  005_water_profiles.sql  006_allergen_lots.sql
src/: app.rs  dashboard.rs  lib.rs  main.rs  openapi.rs  state.rs
src/allergens/: mod.rs
src/audit/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/auth/: cleanup.rs  common_passwords.txt  handler.rs  jwt.rs  mod.rs  models.rs  password.rs  refresh.rs  repository.rs  service.rs
src/batch/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/calendar/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/duty/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/equipment/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
src/fermentation/: handler.rs  mod.rs  models.rs  repository.rs  service.rs
testdata/: sample.xml  sample_brewfather.json
tests/: allergens.rs  audit.rs  auth_tenant.rs  batch_calendar_kinetics.rs  dashboard_openapi.rs  duty.rs  equipment.rs  fermentation.rs  labeldesign.rs  labels.rs  library_inventory.rs  packaging_traceability.rs  procurement.rs  recipes.rs  sales.rs  tracking_reporting.rs  water.rs  yeastbanking.rs
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs  recipe_calc.rs  water_calc.rs
wasm/src/pkg/: mod.rs
(+215 files in other folders)
