[package]
name = "batchwise"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
description = "Batchwise — multi-tenant brewery management platform (Rust port)"
license = "proprietary"
publish = false

[[bin]]
name = "batchwise"
path = "src/main.rs"

[lib]
name = "batchwise"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
http = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }

# Auth & crypto
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.6"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Config
envy = "0.4"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# Real Postgres in tests (mirrors testcontainers-go)
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
approx = "0.5"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
